Support 3.9 changes, backport policy capabilities from upstream

--- a/libsepol/src/meson.build
+++ b/libsepol/src/meson.build
@@ -35,9 +35,9 @@ sources = [
   'policydb.c',
   'policydb_convert.c',
   'policydb_public.c',
+  'policydb_validate.c',
   'port_record.c',
   'ports.c',
-  'roles.c',
   'services.c',
   'sidtab.c',
   'symtab.c',
